// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|Query step fetches the correct contributions count for a given consultation step 1`] = `
Object {
  "step": Object {
    "contributions": Object {
      "totalCount": 37,
    },
    "contributors": Object {
      "totalCount": 5,
    },
    "id": "Q29uc3VsdGF0aW9uU3RlcDptdWx0aUNzdGVwMQ==",
    "votesCount": 4,
  },
}
`;

exports[`Internal|Query step.consultation fetches the correct first consultation by slug of the step 1`] = `
Object {
  "step": Object {
    "consultation": Object {
      "id": "Q29uc3VsdGF0aW9uOmZpcnN0Q29uc3VsdGF0aW9uTXVsdGlDb25zdWx0YXRpb25TdA==",
      "title": "Première consultation",
      "url": "https://capco.test/project/strategie-technologique-de-letat-et-services-publics/consultation/etape-de-multi-consultation/consultation/premiere-consultation",
    },
  },
}
`;

exports[`Internal|Query step.consultation fetches the correct second consultation by slug of the step 1`] = `
Object {
  "step": Object {
    "consultation": Object {
      "id": "Q29uc3VsdGF0aW9uOnNlY29uZENvbnN1bHRhdGlvbk11bHRpQ29uc3VsdGF0aW9uUw==",
      "title": "Deuxième consultation",
      "url": "https://capco.test/project/strategie-technologique-de-letat-et-services-publics/consultation/etape-de-multi-consultation/consultation/deuxieme-consultation",
    },
  },
}
`;

exports[`Internal|Query step.consultations connection fetches the correct consultations 1`] = `
Object {
  "step": Object {
    "consultations": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "Q29uc3VsdGF0aW9uOmZpcnN0Q29uc3VsdGF0aW9uTXVsdGlDb25zdWx0YXRpb25TdA==",
            "title": "Première consultation",
            "url": "https://capco.test/project/strategie-technologique-de-letat-et-services-publics/consultation/etape-de-multi-consultation/consultation/premiere-consultation",
          },
        },
        Object {
          "node": Object {
            "id": "Q29uc3VsdGF0aW9uOnNlY29uZENvbnN1bHRhdGlvbk11bHRpQ29uc3VsdGF0aW9uUw==",
            "title": "Deuxième consultation",
            "url": "https://capco.test/project/strategie-technologique-de-letat-et-services-publics/consultation/etape-de-multi-consultation/consultation/deuxieme-consultation",
          },
        },
      ],
    },
  },
}
`;
